--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,15 @@
-title: Chui Zeng
-logo: /assets/img/logo.png
+title: Matt Chapman # your name (or website title) here
+logo: "/images/linkedin.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
- <br>
-   A research data scientist with 10+ years’ Research & Development experience in environment, climate change, and sustainability studies.
-   A problem solver with profound understanding in geospatial data collection, processing, modelling, and analysis to support government policies and management.
- <br>
- <br>
-   <a href="https://www.linkedin.com/in/chzeng">LinkedIn Profile</a> 
- <br>
-show_downloads: false
-google_analytics:
+  <br>
+  Data Scientist with 4+ years of commercial experience in analytics, strategy and sales and a master's degree in Data Science from Oxford University. Previously at Vodafone, VIMA Group (management consulting), Ovo Energy, HSBC.
+  <br><br>
+  Ranked in top 10% of undergraduate cohort at Cambridge University.
+  <br><br>
+  <a href="https://www.linkedin.com/in/matt-chapman-ba8488118/">View my LinkedIn Profile</a> 
+  
 theme: jekyll-theme-minimal
+google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+
+colors:
+  crimson: '#900C3F'
