--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@ title: Chui Zeng
 logo: /images/logo.png
 description: > # your text below (remove <br> elements if you don't need line breaks)
  <br>
-   A research data scientist with 10+ years’ Research & Development experience in environment, climate change, and sustainability studies.
+   A research data scientist with 10+ yearsâ€™ Research & Development experience in environment, climate change, and sustainability studies.
    A problem solver with profound understanding in geospatial data collection, processing, modelling, and analysis to support government policies and management.
  <br>
  <br>
    <a href="https://www.linkedin.com/in/chzeng">LinkedIn Profile</a> 
  <br>
 show_downloads: false
-google_analytics:
+google_analytics: 
 theme: jekyll-theme-minimal
