--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ description: > # your text below (remove <br> elements if you don't need line br
  <br>
    <a href="https://www.linkedin.com/in/chzeng">LinkedIn Profile</a> 
  <br>
+ <br>
+   <a href="https://www.spatialblog.com">Personal Blog</a> 
+ <br>
 show_downloads: false
 google_analytics: 
 theme: jekyll-theme-minimal
