--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: Chui Zeng
 logo: /images/logo.png
 description: > # your text below (remove <br> elements if you don't need line breaks)
  <br>
-   A research data scientist with 10+ years’ Research & Development experience in environment, climate change, and ecosystem studies.
+   As a research data scientist, I possess extensive experience in conducting research and development in the fields of image processing, computer vision, climate change, and environmental studies
+ <br>
  <br>
    <a href="https://www.linkedin.com/in/chzeng">LinkedIn Profile</a> 
  <br>
