--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,11 @@ title: Chui Zeng
 logo: /images/logo.png
 description: > # your text below (remove <br> elements if you don't need line breaks)
  <br>
-   As a research data scientist, I possess extensive experience in conducting research and development in the fields of image processing, computer vision, climate change, and environmental studies
+   As a research data scientist, I possess extensive research and development experiences in the fields of image processing, computer vision, climate change, and environmental studies
  <br>
  <br>
    <a href="https://www.linkedin.com/in/chzeng">LinkedIn Profile</a> 
+ <br>
  <br>
    <a href="https://www.spatialblog.com">Personal Blog</a> 
  <br>
